--- a/messenger/requirements.txt
+++ b/messenger/requirements.txt
@@ -1,9 +1,12 @@
+bcrypt==3.1.4
+cffi==1.11.5
 click==6.7
 Flask==0.12.2
 Flask-SocketIO==2.9.4
 itsdangerous==0.24
 Jinja2==2.10
 MarkupSafe==1.0
+pycparser==2.18
 python-engineio==2.0.2
 python-socketio==1.8.4
 six==1.11.0
