Added conversation modal

--- a/messenger/components/package.json
+++ b/messenger/components/package.json
@@ -16,13 +16,16 @@
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-env": "^1.6.0",
     "babel-preset-es2015": "^6.24.1",
+    "babel-preset-es2016": "^6.24.1",
     "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-3": "^6.24.1",
     "css-loader": "^0.28.7",
     "moment": "^2.20.1",
     "node-sass": "^4.5.3",
     "prop-types": "^15.6.1",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
+    "react-modal": "^3.3.2",
     "react-redux": "^5.0.7",
     "react-sidebar": "^2.3.2",
     "redux": "^3.7.2",
