--- a/messenger/components/package.json
+++ b/messenger/components/package.json
@@ -29,6 +29,8 @@
     "react-redux": "^5.0.7",
     "react-sidebar": "^2.3.2",
     "redux": "^3.7.2",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.2.0",
     "sass-loader": "^6.0.6",
     "socket.io-client": "^2.0.4",
     "style-loader": "^0.18.2",
