--- a/messenger/requirements.txt
+++ b/messenger/requirements.txt
@@ -1,8 +1,12 @@
 alembic==0.9.8
+Babel==2.5.3
 bcrypt==3.1.4
+blinker==1.4
 cffi==1.11.5
 click==6.7
 Flask==0.12.2
+Flask-Babel==0.11.2
+Flask-Mail==0.9.1
 Flask-Migrate==2.1.1
 Flask-SocketIO==2.9.4
 Flask-SQLAlchemy==2.3.2
@@ -16,6 +20,7 @@ python-dateutil==2.6.1
 python-editor==1.0.3
 python-engineio==2.0.2
 python-socketio==1.8.4
+pytz==2018.3
 six==1.11.0
 SQLAlchemy==1.2.4
 SQLAlchemy-Utils==0.33.0
